# cropeye-ai

./: .replit  README.md  create_test_video.py  index.html  package-lock.json  package.json  pyproject.toml  replit.nix  smart_farming.py  streamlit_app.py  temp_XVID.avi
attached_assets/: Pasted-Architecture-at-a-Glance-pgsql-Copy-Edit-Drone-Footage-Durian-Orchard--1739959917735.txt  Pasted-Build-a-Python-project-called-Smart-Farming-Drone-Imaging-that-performs-basic-weed-or-unhealthy-cr-1739956426969.txt  Pasted-CropEye-AI-Empowering-Farmers-with-AI-Driven-Drones-Welcome-to-CropEye-AI-an-open-source-project--1739962297752.txt  Pasted-Smart-Farming-Drone-AI-Revolutionizing-Durian-Farming-with-AI-Powered-Drones-Welcome-to-Smart-Farm-1739960712895.txt  Pasted-Smart-Farming-Drone-Imaging-An-open-source-project-to-detect-weeds-dry-patches-or-crop-diseases-fr-1739959759349.txt
